feat: update theme file

--- a/src/theme/theme.css
+++ b/src/theme/theme.css
@@ -1,6 +1,7 @@
 :root {
   --purple: #A152EF;
-  --dark: #261932;
+  --dark-purple: #261932;
+  --dark: #5F5964;
   --light: #D3CADD;
   --offWhite: #F9F9F9;
   --white: #FFFFFF;
