feat: adjustments to Header in StudentsList page

--- a/src/pages/StudentsList/StudentList.module.css
+++ b/src/pages/StudentsList/StudentList.module.css
@@ -5,10 +5,10 @@
 
 main {
   flex: 1;
-  background-color: var(--offWhite);
+  background-color: var(--white);
 }
 
-
-main > div {
+.content {
   padding: 80px;
+  margin-left: 260px;
 }
