--- a/src/pages/StudentTaskList/StudentTaskList.module.css
+++ b/src/pages/StudentTaskList/StudentTaskList.module.css
@@ -16,3 +16,134 @@ main {
   padding: 80px;
   margin-left: 260px;
 }
+
+.addTaskButton {
+  background-color: var(--purple);
+  color: var(--white);
+  border: 2px var(--purple) solid;
+  border-radius: 6px;
+  padding: 8px 10px;
+  min-width: 90px;
+  font-size: 1rem;
+  font-weight: 500;
+  cursor: pointer;
+  transition: background-color 0.5s ease;
+  margin-bottom: 36px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
+.addTaskButton:hover {
+  opacity: 0.8;
+}
+
+.addTaskIcon {
+  color: var(--white);
+  font-size: 1.25rem;
+}
+
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.popupContent {
+  background-color: var(--white);
+  padding: 30px;
+  min-width: 480px;
+  border-radius: 10px;
+  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+
+  h2 {
+    font-size: 24px;
+    color: var(--purple);
+    margin-bottom: 30px;
+  }
+}
+
+.popupContent form {
+  display: flex;
+  flex-direction: column;
+}
+
+.popupContent input, textarea {
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 2px solid var(--light);
+  border-radius: 8px;
+  font-size: 1rem;
+  color: var(--purple);
+  font-weight: 500;
+  background-color: var(--offWhite);
+  outline: none;
+  transition: border-color 0.3s ease;
+  width: 100%;
+  height: 48px;
+}
+
+.popupContent textarea {
+  resize: none;
+  height: 120px;
+}
+
+.popupActions {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 70px;
+}
+
+.popupActions button {
+  background-color: var(--purple);
+  color: var(--white);
+  border: 2px var(--purple) solid;
+  border-radius: 6px;
+  padding: 8px 10px;
+  min-width: 100px;
+  font-size: 1rem;
+  font-weight: 500;
+  cursor: pointer;
+  transition: background-color 0.5s ease;
+  margin-bottom: 6px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
+.popupActions button:hover {
+  opacity: 0.8;
+}
+
+.popupActions .cancelButton {
+  background-color: var(--white);
+  color: var(--purple);
+  border: 2px var(--purple) solid;
+  border-radius: 6px;
+  padding: 8px 10px;
+  min-width: 100px;
+  font-size: 1rem;
+  font-weight: 500;
+  cursor: pointer;
+  transition: background-color 0.5s ease;
+  margin-bottom: 6px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
+.popupActions .cancelButton:hover {
+  opacity: 0.8;
+}
