feat: update sidebar component

--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -8,6 +8,36 @@
   background-color: var(--white);
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
   border-right: var(--light) 1px solid;
+
+  nav ul {
+    list-style: none;
+    padding: 0;
+  }
+  
+  nav li {
+    font-size: 0.925rem;
+    color: var(--dark);
+    margin: 15px 0;
+    cursor: pointer;
+    transition: color 0.2s ease;
+    display: flex;
+    align-items: center;
+  }
+  
+  nav li:hover {
+    color: var(--light);
+  }
+  
+  p {
+    color: var(--dark);
+    font-size: 0.925rem;
+  }
+  
+  span {
+    color: var(--purple);
+    font-weight: 600;
+  }
+  
 }
 
 .logoSection {
@@ -23,23 +53,4 @@
 .icon {
   color: var(--purple);
   margin-right: 8px;
-}
-
-nav ul {
-  list-style: none;
-  padding: 0;
-}
-
-nav li {
-  font-size: 0.925rem;
-  color: var(--dark);
-  margin: 15px 0;
-  cursor: pointer;
-  transition: color 0.2s ease;
-  display: flex;
-  align-items: center;
-}
-
-nav li:hover {
-  color: var(--light);
 }
