feat: update task card component

--- a/src/components/TaskCard/TaskCard.module.css
+++ b/src/components/TaskCard/TaskCard.module.css
@@ -52,10 +52,11 @@
   gap: 20px;
 }
 
-button {
+.iconButton {
   border: none;
   background: none;
   cursor: pointer;
+  width: auto;
 }
 
 .checkIcon {
