--- a/src/components/StudentTaskCard/StudentTaskCard.module.css
+++ b/src/components/StudentTaskCard/StudentTaskCard.module.css
@@ -39,6 +39,12 @@
   flex-direction: row;
   justify-content: flex-end;
   gap: 20px;
+
+  button {
+    background: none;
+    border: none;
+    cursor: pointer;
+  }
 }
 
 .sendButton {
